# unifi-network-exporter

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.example.yml  setup-secrets.sh
.github/workflows/: ci.yml  release.yml
src/: config.rs  lib.rs  main.rs  metrics.rs  unifi.rs  unifi_integration.rs
tests/: integration_test.rs
